--- a/index.css
+++ b/index.css
@@ -371,7 +371,7 @@ footer {
 }
 
 #scroll-top-button:hover {
-    filter: drop-shadow(0 0px 15px rgba(65, 183, 247, 0.8));}
+    filter: drop-shadow(0px 0px 15px rgba(65, 183, 247, 0.8));}
 
 #scroll-top {
     position: absolute;
